[saml-libs] update from upstream
Plus a bunch of changes/fixes to get this all working & moving to LocalDate

https://github.com/alphagov/verify-saml-libs/compare/31521398e52ebc21108fe671dcfe25cc9d2bd6a0...52a998045993b1f41f7d44158c07c0def3a9f618